--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,19 @@
     "type": "project",
     "description": "imi 框架的 MQTT Server 项目。https://imiphp.com",
 	"require": {
-        "yurunsoft/imi": "~1.0",
+        "php": ">=7.1",
+        "imiphp/imi": "~1.3",
         "imiphp/imi-mqtt": "~1.0"
 	},
+    "require-dev": {
+        "swoole/ide-helper": "^4.4"
+    },
     "autoload": {
         "psr-4" : {
 			"ImiApp\\" : "./"
         }
-	}
+	},
+    "config": {
+        "sort-packages": true
+    }
 }
