--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,13 @@
     "type": "project",
     "description": "imi 框架的 MQTT Server 项目。https://imiphp.com",
 	"require": {
-        "php": ">=7.1",
-        "imiphp/imi": "~1.3",
-        "imiphp/imi-mqtt": "~1.0"
+        "php": ">=7.4",
+        "imiphp/imi": "~2.1.0",
+        "imiphp/imi-swoole": "~2.1.0",
+        "imiphp/imi-mqtt": "~2.1.0"
 	},
     "require-dev": {
-        "swoole/ide-helper": "^4.4"
+        "swoole/ide-helper": "^4.8"
     },
     "autoload": {
         "psr-4" : {
