--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,25 @@
         "imiphp/imi-mqtt": "~2.1.0"
 	},
     "require-dev": {
-        "swoole/ide-helper": "^4.8"
+        "swoole/ide-helper": "^4.8",
+        "friendsofphp/php-cs-fixer": "~3.4.0",
+        "phpstan/phpstan": "~1.8.0",
+        "phpunit/phpunit": "~9.5.0"
     },
     "autoload": {
         "psr-4" : {
 			"ImiApp\\" : "./"
         }
 	},
+    "autoload-dev": {
+        "psr-4": {
+            "ImiApp\\Test\\": "./tests"
+        }
+    },
     "config": {
         "sort-packages": true
+    },
+    "scripts": {
+        "test": "@php ./vendor/bin/phpunit -c ./phpunit.xml"
     }
 }
