更换 imi 项目命名空间配置的位置

--- a/composer.json
+++ b/composer.json
@@ -29,5 +29,8 @@
     },
     "scripts": {
         "test": "@php ./vendor/bin/phpunit -c ./phpunit.xml"
+    },
+    "imi": {
+        "namespace": "ImiApp"
     }
 }
