--- a/composer.json
+++ b/composer.json
@@ -2,23 +2,23 @@
     "name": "imiphp/project-mqtt",
     "type": "project",
     "description": "imi 框架的 MQTT Server 项目。https://imiphp.com",
-	"require": {
+    "require": {
         "php": ">=7.4",
         "imiphp/imi": "~2.1.0",
         "imiphp/imi-swoole": "~2.1.0",
         "imiphp/imi-mqtt": "~2.1.0"
-	},
+    },
     "require-dev": {
         "swoole/ide-helper": "^4.8",
-        "friendsofphp/php-cs-fixer": "~3.4.0",
+        "php-cs-fixer/shim": "~3.22.0",
         "phpstan/phpstan": "~1.8.0",
         "phpunit/phpunit": "~9.5.0"
     },
     "autoload": {
-        "psr-4" : {
-			"ImiApp\\" : "./"
+        "psr-4": {
+            "ImiApp\\": "./"
         }
-	},
+    },
     "autoload-dev": {
         "psr-4": {
             "ImiApp\\Test\\": "./tests"
